@@ -1,3 +1,10 @@
+2006-05-09  Murray Cumming  <murrayc@murrayc.com>
+
+        * jhbuild/modtypes/__init__.py:
+	* jhbuild/modtypes/autotools.py: _parse_module_set(): When parsing modules, catch 
+	the KeyError exception, so we can raise a more readable error if the repository 
+	was not found.
+
 2006-05-09  James Henstridge  <james@jamesh.id.au>
 
 	* modulesets/freedesktop.modules: convert to new syntax.
